# projectkit

./: API.md  Cargo.toml  README.md  projectkit.db  projectkit.toml  test_api.sh
crates/api/: Cargo.toml
crates/api/src/: auth_handlers.rs  db_handlers.rs  file_handlers.rs  lib.rs  middleware.rs  router.rs  state.rs
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  jwt.rs  lib.rs  model.rs  password.rs  service.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  migrations.rs  seed.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  model.rs  service.rs
storage/: efafba45-bcc5-49f6-bc1f-111ec6603425.txt
