[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
api = { path = "../api" }
axum = "0.8.6"
auth = { path = "../auth" }
projectkit_core = { path = "../core", package = "core" }
orm = { workspace = true }
async-trait = "0.1.89"
