[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt"] }
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
orm = { workspace = true }
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3.14.0"
tokio-test = "0.4.4"
